--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,17 +23,17 @@ bevy_sprite = ["bevy/bevy_sprite"]
 brotli = ["dep:brotli"]
 
 [dependencies]
-bevy = { version = "0.15", default-features = false, features = ["bevy_scene"] }
+bevy = { path = "../../bevy_engine" }
 rmp-serde = "1.3"
 serde_json = "1.0"
 serde = "1.0"
 platform-dirs = "0.3"
 thiserror = "2.0"
 async-std = "1.13"
-brotli = { version = "7.0", optional = true }
+brotli = { version = "8.0.1", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-bevy = { version = "0.15", default-features = false }
+bevy = { path = "../../bevy_engine" }
 web-sys = { version = "0.3", default-features = false, features = [
     "Storage",
     "Window",
@@ -43,7 +43,7 @@ fragile = "2.0"
 uuid = { version = "1.16", features = ["js"] }
 
 [dev-dependencies]
-bevy = { version = "0.15" }
-bevy-inspector-egui = "0.30.0"
-ron = "0.9"
+bevy = { path = "../../bevy_engine" }
+bevy-inspector-egui = "0.31.0"
+ron = "0.10.1"
 io-adapters = "0.4"
